
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.Cycle">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/map" tools:context=".activities.Cycle"
            android:name="com.google.android.gms.maps.SupportMapFragment" />

        <FrameLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|bottom"
            android:weightSum="1"
            android:id="@+id/bottom"
            android:paddingBottom="15dp"
            android:alpha="0.9">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/menuButton"
                android:layout_gravity="left|bottom"
                android:background="@drawable/menu_button"
                android:layout_marginLeft="15dp"
                android:contentDescription="menu button"
                android:alpha="0.9"
                android:layout_marginBottom="25dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cycle_start_button"
                android:id="@+id/startPause"
                android:layout_gravity="bottom|center_horizontal"
                android:clickable="true"
                android:textColor="@color/custom_lighter"
                android:textAlignment="center"
                android:textSize="20sp"
                android:visibility="visible"
                android:background="@color/background"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

        </FrameLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="392dp"
            android:layout_gravity="center_horizontal|top"
            android:id="@+id/top_search"
            android:weightSum="1"
            android:alpha="0.9"
            android:visibility="visible"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:padding="13dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/searchBar"
                android:layout_gravity="left|top"
                android:background="@color/custom_lightest"
                android:hint="@string/search_bar_hint"
                android:textColor="@color/background"
                android:padding="10dp"
                android:textSize="18sp"
                android:textColorHint="@color/custom_medium" />

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/scrollView" >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/scrollViewLayout">

                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="206dp"
            android:id="@+id/top_display"
            android:background="@color/background"
            android:alpha="0.9"
            android:visibility="gone">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/horizontal_line"
                android:background="@drawable/horizontal_line"
                android:layout_gravity="center_vertical"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="110dp"
                android:contentDescription="@string/activity_cycle_display" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/horizontal_line"
                android:weightSum="1"
                android:baselineAligned="false"
                android:layout_centerHorizontal="true"
                android:id="@+id/linearLayout">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="97dp"
                    android:id="@+id/line_tilt_to_left"
                    android:background="@drawable/line_tilt_to_left"
                    android:layout_weight="1.71" />

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="97dp"
                    android:id="@+id/line_tilt_to_right"
                    android:background="@drawable/line_tilt_to_right"
                    android:layout_weight="1.71"
                    android:layout_marginLeft="30dp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/linearLayout"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/speed">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/current_speed"
                    android:id="@+id/currentSpeed"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/text_color"
                    android:layout_gravity="center"
                    android:textSize="65sp"
                    android:textAlignment="center"
                    android:paddingLeft="5dp"
                    android:layout_marginTop="20dp"
                    android:paddingRight="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/speed_hint"
                    android:id="@+id/speedHint"
                    android:layout_gravity="left|top"
                    android:textColor="@color/text_color"
                    android:textSize="20sp"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/currentSpeed"
                    android:layout_toStartOf="@+id/currentSpeed"
                    android:layout_marginTop="20dp" />

                <TextView
                    android:layout_width="92dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/current_speed_description"
                    android:id="@+id/currentSpeedDescription"
                    android:layout_gravity="right|center_vertical"
                    android:textColor="@color/text_color"
                    android:layout_toRightOf="@+id/currentSpeed"
                    android:layout_toEndOf="@+id/currentSpeed"
                    android:layout_alignBottom="@+id/currentSpeed" />
            </RelativeLayout>

            <FrameLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/horizontal_line"
                android:id="@+id/caloriesTimeDistance"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/distance_hint"
                    android:id="@+id/distanceHint"
                    android:layout_gravity="right|bottom"
                    android:textColor="@color/text_color"
                    android:paddingRight="10dp"
                    android:gravity="bottom"
                    android:paddingBottom="10dp"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/calories_burnt_hint"
                    android:id="@+id/caloriesBurntHint"
                    android:layout_gravity="left|bottom"
                    android:textColor="@color/text_color"
                    android:textSize="20sp"
                    android:paddingLeft="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="bottom" />

                <Chronometer
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/chronometer"
                    android:layout_gravity="center_horizontal|top"
                    android:text="@string/chronometer_text"
                    android:textColor="@color/text_color"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/time_hint"
                    android:id="@+id/timeHint"
                    android:layout_gravity="center"
                    android:textColor="@color/text_color"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/default_distance_value"
                    android:id="@+id/distance"
                    android:layout_gravity="right|center_vertical"
                    android:textColor="@color/text_color"
                    android:textSize="35sp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/cycle_calories"
                    android:id="@+id/calories"
                    android:layout_gravity="left|center_vertical"
                    android:textSize="35sp"
                    android:textColor="@color/text_color"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp" />

            </FrameLayout>
        </RelativeLayout>

        <FrameLayout
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:id="@+id/countDownDisplay"
            android:background="@color/background"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/countDown"
                android:layout_gravity="center"
                android:textColor="@color/custom_lighter"
                android:textSize="100sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/count_down_hint"
                android:id="@+id/countDownHint"
                android:layout_gravity="center_horizontal|top"
                android:textColor="@color/custom_lighter"
                android:textSize="30sp"
                android:padding="20dp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="298dp"
            android:layout_height="263dp"
            android:layout_gravity="center"
            android:background="@color/background"
            android:id="@+id/pausedLayout"
            android:visibility="gone"
            android:padding="5dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:paddingBottom="10dp"
                android:id="@+id/pausedLayoutButtons">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/paused_layout_continue"
                    android:id="@+id/pausedLayoutContinue"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/custom_lighter"
                    android:textColor="@color/background"
                    android:textSize="20sp" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/paused_layout_stop"
                    android:id="@+id/pausedLayoutStop"
                    android:layout_gravity="center_horizontal|bottom"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/custom_lighter"
                    android:textColor="@color/background"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:id="@+id/pausedLayoutHint">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="10dp">

                    <TextView
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:text="@string/space"
                        android:id="@+id/pause1"
                        android:background="@color/custom_lighter"
                        android:textSize="45sp"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:text="@string/space"
                        android:id="@+id/pause2"
                        android:background="@color/custom_lighter"
                        android:textSize="45sp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="10dp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/paused_layout_hint"
                    android:id="@+id/pause_hint"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/custom_lighter"
                    android:textSize="20sp"
                    android:layout_marginTop="5dp" />

            </LinearLayout>

        </FrameLayout>


    </FrameLayout>




    <ListView
        android:id="@+id/drawerList"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="@color/background">
    </ListView>
</android.support.v4.widget.DrawerLayout>









